feat: add MQTT signal receiver and integrate with chart for real-time buy/sell visualization

--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run signal-receiver\" \"vite\"",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "signal-receiver": "node scripts/signal-receiver.js"
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.555.0",
+    "mqtt": "^5.14.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
@@ -23,6 +27,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
