feat: externalize server and proxy configuration to environment variables and enhance Vite proxy setup.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist-ssr
 *.local
 package-lock.json
 
+# Local environment file (do NOT commit)
+/.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
