feat: Update default server and WebSocket ports to empty for ngrok compatibility and add clarifying comments.

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,11 @@ MQTT_BROKER=tcp://localhost:1883
 
 # Chart/backend host/port overrides (for remote host like ngrok):
 # Protocol to use when connecting to the chart/backend. Use `https` for TLS (ngrok defaults to https for public URLs).
+# For ngrok URLs, leave ports empty (ngrok uses standard HTTPS port 443)
 OPENALGO_SERVER_PROTOCOL=https
 OPENALGO_SERVER_HOST=upright-dog-rapidly.ngrok-free.app
-OPENALGO_SERVER_PORT=8080
-OPENALGO_WS_PORT=8765
+OPENALGO_SERVER_PORT=
+OPENALGO_WS_PORT=
 
 # Local server port (optional override):
 SERVER_PORT=3001
